--- a/requirements.txt
+++ b/requirements.txt
@@ -1,109 +1,3 @@
-amqp==5.1.1
-appdirs==1.4.3
-asgiref==3.5.2
-astroid==2.11.7
-async-timeout==4.0.3
-attrs==22.1.0
-bcrypt==3.1.7
-billiard==3.6.4.0
-blinker==1.4
-boto3==1.26.165
-botocore==1.29.165
-celery==5.2.7
-certifi==2023.7.22
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==2.1.1
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.3
-coverage==6.4.2
-cryptography==37.0.4
-dbus-python==1.2.16
-Deprecated==1.2.14
-device-detector==5.0.1
-dill==0.3.5.1
-distlib==0.3.0
-distro==1.4.0
-Django==4.0.6
-django-cors-headers==3.13.0
-django-crequest==2018.5.11
-django-filter==22.1
-django-ipware==4.0.2
-django-simple-history==3.2.0
-djangorestframework==3.13.1
-djangorestframework-simplejwt==5.2.0
-entrypoints==0.3
-et-xmlfile==1.1.0
-exceptiongroup==1.1.3
-Faker==20.1.0
-fasteners==0.14.1
-filelock==3.0.12
-future==0.18.2
-greenlet==2.0.2
-h11==0.14.0
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==1.5.0
-iniconfig==1.1.1
-isort==5.10.1
-jmespath==1.0.1
-jwcrypto==1.3.1
-keyring==18.0.1
-kombu==5.3.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.7.1
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-mccabe==0.7.0
-monotonic==1.5
-more-itertools==4.2.0
-mysqlclient==2.1.1
-netifaces==0.10.4
-num2words==0.5.12
-numpy==1.23.1
-oauthlib==3.1.0
-olefile==0.46
-openpyxl==3.0.10
-outcome==1.2.0
-packaging==21.3
-pandas==1.4.3
-paramiko==2.6.0
-pdfkit==1.0.0
-pexpect==4.6.0
-Pillow==9.3.0
-platformdirs==2.5.2
-pluggy==1.0.0
-prompt-toolkit==3.0.39
-protobuf==3.6.1
-py==1.11.0
-pycairo==1.16.2
-pycparser==2.21
-pycryptodome==3.15.0
-pycups==1.9.73
-pylint==2.14.5
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyotp==2.8.0
-pyparsing==3.0.9
-pyRFC3339==1.1
-PySocks==1.7.1
-pytest==7.1.2
-pytest-django==4.5.2
-redis==4.3.4
-regex==2023.8.8
-reportlab==3.5.34
-requests==2.28.1
-requests-unixsocket==0.2.0
-s3transfer==0.6.2
-SecretStorage==2.3.1
-selenium==4.12.0
-simplejson==3.16.0
-six==1.16.0
-sniffio==1.3.0
+pytz==2023.3.post1
 sortedcontainers==2.4.0
+wcwidth==0.2.12
